feat: add header

--- a/travel/index.html
+++ b/travel/index.html
@@ -5,8 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Travel</title>
+    <title>Index</title>
     <link rel="stylesheet" href="./css/style.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Aleo&family=Red+Hat+Text:wght@400;500&display=swap" rel="stylesheet">
 </head>
 
 <body class="main__body">
@@ -14,14 +17,18 @@
     <header>
     <!-- Navbar -->
     <nav>
-        <div class="container">
+        <div class="container container-header">
             <div class="navbar">
-                <div class="logo"> <a href="#"> #freelance </a> </div>
+                <div class="logo"> <a href="#"> <img src="./img/logo.svg" alt="logo"> </a> </div>
                 <ul class="menu">
-                    <li class="menu__item"><a href="#" class="menu__item-link" data-scroll>Портфолио</a></li>
-                    <li class="menu__item"><a href="#" class="menu__item-link" data-scroll>Инфо</a></li>
-                    <li class="menu__item"><a href="#" class="menu__item-link" data-scroll>Контакты</a></li>
+                    <li class="menu__item"><a href="#" class="menu__item-link" data-scroll>How It Works</a></li>
+                    <li class="menu__item"><a href="#" class="menu__item-link" data-scroll>Plan Your Trip</a></li>
+                    <li class="menu__item"><a href="#" class="menu__item-link" data-scroll>Destinations</a></li>
+                    <li class="menu__item"><a href="#" class="menu__item-link" data-scroll>Travel Stories</a></li>
                 </ul>
+                <div class="nav__btns">
+                    <a href="#" class="btn btn__login">Login</a>
+                </div>
                 <div class="burger">
                     <span></span>
                 </div>
@@ -32,19 +39,14 @@
 
     <!-- Main Page -->
     <main>
-    <section class="section__Expore">
+        <section class="section__Expore">
   <div class="container">
     <h3 class="section__title">About</h3>
   </div>
-</section>    
     </main>
 
     <!-- Footer -->
-    <footer>
-    <div class="container">
-        <div class="footer">Footer</div>
-    </div>
-</footer>
+    
 
 </body>
 
