feat: add explore section

--- a/travel/index.html
+++ b/travel/index.html
@@ -17,7 +17,7 @@
     <header>
     <!-- Navbar -->
     <nav>
-        <div class="container container-header">
+        <div class="container header-container">
             <div class="navbar">
                 <div class="logo"> <a href="#"> <img src="./img/logo.svg" alt="logo"> </a> </div>
                 <ul class="menu">
@@ -39,10 +39,27 @@
 
     <!-- Main Page -->
     <main>
-        <section class="section__Expore">
-  <div class="container">
-    <h3 class="section__title">About</h3>
+    <section class="section__explore">
+  <div class="container explore-container">
+    <div class="explore">
+      <div class="explore__item">
+        <h2 class="explore__title">
+          Explore the beauty of the World
+        </h2>
+        <p class="explore__subtitle">
+          Receive personalized recommendations for countries, hotels, activities and more
+        </p>
+        <div class="explore__search">
+          <input type="text" class="explore__input" placeholder="What would you like to do?">
+          <div class="explore__btn">
+            <a href="#" class="btn explore__btn">Start Planning</a>
+        </div>
+        </div>
+      </div>
+    </div>
+    
   </div>
+</section>
     </main>
 
     <!-- Footer -->
