--- a/travel/index.html
+++ b/travel/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="zxx">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,20 +11,17 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Aleo&family=Red+Hat+Text:wght@400;500&display=swap" rel="stylesheet">
 </head>
-
 <body class="main__body">
-    <!-- Header -->
     <header>
-    <!-- Navbar -->
     <nav>
         <div class="container header-container">
             <div class="navbar">
                 <div class="logo"> <a href="#"> <img src="./img/logo.svg" alt="logo"> </a> </div>
                 <ul class="menu">
-                    <li class="menu__item"><a href="#" class="menu__item-link" data-scroll>How It Works</a></li>
-                    <li class="menu__item"><a href="#" class="menu__item-link" data-scroll>Plan Your Trip</a></li>
-                    <li class="menu__item"><a href="#" class="menu__item-link" data-scroll>Destinations</a></li>
-                    <li class="menu__item"><a href="#" class="menu__item-link" data-scroll>Travel Stories</a></li>
+                    <li class="menu__item"><a href="#preview" class="menu__item-link" data-scroll>How It Works</a></li>
+                    <li class="menu__item"><a href="#steps" class="menu__item-link" data-scroll>Plan Your Trip</a></li>
+                    <li class="menu__item"><a href="#destinations" class="menu__item-link" data-scroll>Destinations</a></li>
+                    <li class="menu__item"><a href="#stories" class="menu__item-link" data-scroll>Travel Stories</a></li>
                 </ul>
                 <button class="btn nav__btns">Login</button>
                 <div class="burger">
@@ -35,10 +31,8 @@
         </div>
     </nav>
 </header>
-
-    <!-- Main Page -->
     <main>
-    <section class="section__explore">
+    <section id="preview" class="section__explore">
   <div class="container explore-container">
     <div class="explore">
       <div class="explore__item">
@@ -50,16 +44,16 @@
         </p>
         <div class="explore__search">
           <input type="text" class="explore__input" placeholder="What would you like to do?">
-          <div class="btn explore__btn">
+          <button class="btn explore__btn">
             Start Planning
-        </div>
+        </button>
         </div>
       </div>
     </div>
     
   </div>
 </section>
-    <section class="section__steps">
+    <section id="steps" class="section__steps">
   <div class="container">
     <h2 class="section__title">
       3 STEPS TO THE PERFECT TRIP
@@ -89,7 +83,7 @@
     </div>
   </div>
 </section>
-    <section class="section__destination">
+    <section id="destinations" class="section__destination">
   <div class="container">
     <h2 class="section__title">
       POPULAR DESTINATIONS
@@ -122,8 +116,8 @@
     </button>
   </div>
 </section>
-    <section class="section__stories">
-  <h2 class="section__title">
+    <section id="stories" class="section__stories">
+  <h2 class="section__title stories__title">
     TRAVEL STORIES
   </h2>
   <div class="container stories-container">
@@ -189,8 +183,6 @@
   
 </section>
     </main>
-
-    <!-- Footer -->
     <footer>
     <div class="container footer-container">
         <div class="footer">
@@ -198,16 +190,13 @@
             All Rights Reserved © Travel Portal
           </p>
           <ul class="footer__list">
-             <li class="social__list-item"><a href="#" class="footer__link"><img src="./img/instagram-fill.svg" alt="logo" class="footer__logo"></a></li>
-             <li class="social__list-item"><a href="#" class="footer__link"><img src="./img/video.svg" alt="logo" class="footer__logo"></a></li>
-             <li class="social__list-item"><a href="#" class="footer__link"><img src="./img/twitter.svg" alt="logo" class="footer__logo"></a></li>
+             <li class="social__list-item"><a href="https://github.com/S4mm4ael" class="footer__link"><img src="./img/instagram-fill.svg" alt="logo" class="footer__logo"></a></li>
+             <li class="social__list-item"><a href="https://rs.school/" class="footer__link"><img src="./img/video.svg" alt="logo" class="footer__logo"></a></li>
+             <li class="social__list-item"><a href="https://s4mm4ael.github.io/rsschool-cv/" class="footer__link"><img src="./img/twitter.svg" alt="logo" class="footer__logo"></a></li>
           </ul>
         </div>
     </div>
 </footer> 
-
+    <script src="./js/scripts.min.js"></script>
 </body>
-
-<script src="./js/scripts.min.js"></script>
-
 </html>
