--- a/travel/index.html
+++ b/travel/index.html
@@ -84,7 +84,7 @@
   </div>
 </section>
     <section id="destinations" class="section__destination">
-  <div class="container">
+  <div class="container destination__container">
     <h2 class="section__title">
       POPULAR DESTINATIONS
     </h2>
