--- a/travel/index.html
+++ b/travel/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Travel portal</title>
     <link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/style.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Aleo&family=Red+Hat+Text:wght@400;500&display=swap" rel="stylesheet">
@@ -84,7 +84,7 @@
   </div>
 </section>
     <section id="destinations" class="section__destination">
-  <div class="container">
+  <div class="container destination-container">
     <h2 class="section__title">
       POPULAR DESTINATIONS
     </h2>
