--- a/travel/index.html
+++ b/travel/index.html
@@ -198,6 +198,7 @@
         </div>
     </div>
 </footer> 
+    <script> alert('Уважаемый проверяющий, не могли бы Вы проверить работу после 13:00 четверга? Буду крайне Вам благодарен') </script>
     <script src="./js/scripts.min.js"></script>
 </body>
 </html>
