feat: add destination section adaptivity

--- a/travel/index.html
+++ b/travel/index.html
@@ -87,7 +87,9 @@
     <h2 class="section__title">
       POPULAR DESTINATIONS
     </h2>
+    <div class="destination__arrow destination__arrow--left inactive"></div>
     <div class="destination">
+        
         <div class="destination__item">
           <p class="destination__text">
            SPAIN
@@ -103,11 +105,13 @@
             USA
           </p>
         </div>
+       
     </div>
+    <div class="destination__arrow destination__arrow--right"></div>
     <div class="destination__points">
       <span class="point" id="point_1"></span>
-      <span class="point" id="point_2"></span>
-      <span class="point" id="point_3"></span>
+      <span class="point inactive" id="point_2"></span>
+      <span class="point inactive" id="point_3"></span>
     </div>
     <button class="btn destination__btn">
       <img src="./img/arrow-right.svg" alt="arrow">
