feat: adaptivity implementation finish

--- a/travel/index.html
+++ b/travel/index.html
@@ -22,8 +22,10 @@
                     <li class="menu__item"><a href="#steps" class="menu__item-link" data-scroll>Plan Your Trip</a></li>
                     <li class="menu__item"><a href="#destinations" class="menu__item-link" data-scroll>Destinations</a></li>
                     <li class="menu__item"><a href="#stories" class="menu__item-link" data-scroll>Travel Stories</a></li>
+                    <li class="menu__item hidden"><a href="#" class="menu__item-link" data-scroll>Account</a></li>
+                    <li class="menu__item hidden"><a href="#social" class="menu__item-link" data-scroll>Social media</a></li>
                 </ul>
-                <button class="btn nav__btns">Login</button>
+                <button class="btn nav__btns btn__login">Login</button>
                 <div class="burger">
                     <span></span>
                 </div>
@@ -109,7 +111,7 @@
     </div>
     <div class="destination__arrow destination__arrow--right"></div>
     <div class="destination__points">
-      <span class="point" id="point_1"></span>
+      <span class="point " id="point_1"></span>
       <span class="point inactive" id="point_2"></span>
       <span class="point inactive" id="point_3"></span>
     </div>
@@ -132,7 +134,7 @@
             10 Photos of Attractive Thailand
           </h3>
           <p class="stories__paragraph">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit... 
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit a... 
             <span class="stories_read-more">Read more</span>
           </p>
         </div>
@@ -144,7 +146,7 @@
             Canyonlands National Park, Utah
           </h3>
           <p class="stories__paragraph">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit... 
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit a... 
             <span class="stories_read-more">Read more</span>
           </p>
         </div>
@@ -156,7 +158,7 @@
             I left my heart in the Mountains!
           </h3>
           <p class="stories__paragraph">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit... 
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit a...  
             <span class="stories_read-more">Read more</span>
           </p>
         </div>
@@ -168,7 +170,7 @@
             The Longest journey in my life!
           </h3>
           <p class="stories__paragraph">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit... 
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit a...  
             <span class="stories_read-more">Read more</span>
           </p>
         </div>
@@ -186,7 +188,7 @@
   
 </section>
     </main>
-    <footer>
+    <footer id="social">
     <div class="container footer-container">
         <div class="footer">
           <p class="credits">
