fix: burger menu

--- a/travel/index.html
+++ b/travel/index.html
@@ -27,7 +27,7 @@
                 </ul>
                 <button class="btn nav__btns btn__login">Login</button>
                 <div class="burger">
-                    <span></span>
+                    <span class="burger__span"></span>
                 </div>
             </div>
         </div>
@@ -202,7 +202,7 @@
         </div>
     </div>
 </footer> 
-    <script> alert('Уважаемый проверяющий, не могли бы Вы проверить работу после 13:00 четверга? Буду крайне Вам благодарен') </script>
-    <script src="./js/scripts.min.js"></script>
+   
+    <script src="./js/scripts.js"></script>
 </body>
 </html>
