fix: adaptivity minor bugs

--- a/travel/index.html
+++ b/travel/index.html
@@ -116,7 +116,7 @@
       <span class="point inactive" id="point_3"></span>
     </div>
     <button class="btn destination__btn">
-      <img src="./img/arrow-right.svg" alt="arrow">
+      <img class="btn__arrow" src="./img/arrow-right.svg" alt="arrow">
       Find More
     </button>
   </div>
