--- a/travel/index.html
+++ b/travel/index.html
@@ -25,7 +25,7 @@
             <li class="menu__item"><a href="#steps" class="menu__item-link" data-scroll>Plan Your Trip</a></li>
             <li class="menu__item"><a href="#destinations" class="menu__item-link" data-scroll>Destinations</a></li>
             <li class="menu__item"><a href="#stories" class="menu__item-link" data-scroll>Travel Stories</a></li>
-            <li class="menu__item hidden"><a href="#" class="menu__item-link" data-scroll>Account</a></li>
+            <li class="menu__item hidden"><a href="#" class="menu__item-link " data-scroll>Account</a></li>
             <li class="menu__item hidden"><a href="#social" class="menu__item-link" data-scroll>Social media</a></li>
           </ul>
           <button class="btn nav__btns btn__login">Login</button>
@@ -225,6 +225,24 @@
     </div>
   </footer>
   <div class="popup"></div>
+  <!-- Modal -->
+  <div class="modal__wrapper" style="display: flex">
+    <div class="modal">
+
+      <div class="modal__title"><span>Log in to your account</span> </div>
+      <div class="modal__body">
+        <div class="modal__input">Sign In with Facebook</div>
+        <div class="modal__input">Sign In with Google</div>
+        <div class="modal__input"><span>or</span></div>
+        <div class="modal__input"><span class="input__span">E-mail</span></div>
+        <div class="modal__input"><span class="input__span">Password</span></div>
+        <div class="modal__input">Sign in</div>
+        <a href="#">Forgot Your Password?</a>
+        <span>-</span>
+        <p class="modal__register">Dont have an account?<a href="#">Register</a></p>
+      </div>
+    </div>
+  </div>
   <script src="./js/scripts.js"></script>
 </body>
 
