feat: task completed

--- a/travel/index.html
+++ b/travel/index.html
@@ -97,24 +97,24 @@
           <div class="swiper">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
-                <div class="destination__item">
-                    <img src="./img/Destination_1.jpg" alt="spain">
+                <div class="destination__item destination__item--1">
+                    <img class="destination__img"  src="./img/Destination_1.jpg" alt="spain">
                     <p class="destination__text">
                       SPAIN
                     </p>
                 </div>
               </div>
               <div class="swiper-slide ">
-                <div class="destination__item">
-                  <img src="./img/Destination_2.jpg" alt="JAPAN">
+                <div class="destination__item destination__item--2">
+                  <img class="destination__img" src="./img/Destination_2.jpg" alt="JAPAN">
                   <p class="destination__text">
                     JAPAN
                   </p>
                 </div>
               </div>   
               <div class="swiper-slide">
-                <div class="destination__item">
-                  <img src="./img/Destination_3.jpg" alt="USA">
+                <div class="destination__item destination__item--3">
+                  <img class="destination__img"  src="./img/Destination_3.jpg" alt="USA">
                   <p class="destination__text">
                     USA
                   </p>
